package com.example.cinefacil.util

object TestTags {
    const val MOVIE_DETAILS_SCREEN = "movie_details_screen"
    const val HOME_MOVIE_CARD = "home_movie_card"
    const val HOME_ICON = "home_icon"
    const val HOME_SCREEN = "home_screen"
    const val FAVORITES_ICON = "favorites_icon"
    const val FAVORITES_SCREEN = "favorites_screen"
    const val BACK_BUTTON = "back_button"
    const val FAVORITE_BUTTON = "favorite_button"
    const val FAVORITE_MOVIE_CARD = "favorite_movie_card"
}